--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 MONGODB_URI=mongodb+srv://tanmaychavan2214:tanmay1234@cluster0.voauw0o.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 PORT=5000
+JWT_SECRET=password
